# nsfr

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/rmgr/: nsfr.h
src/: nsfr.cpp
tests/: CMakeLists.txt  tests.cpp
